# sc-machine

./: CMakeLists.txt
sc-kpm/: CMakeLists.txt
sc-kpm/search/: CMakeLists.txt  search.c  search_agents.h  search_keynodes.c  search_keynodes.h
sc-kpm/search-books/: CMakeLists.txt  search_book_append_character.cpp  search_book_append_character.h  search_book_append_event.cpp  search_book_append_event.h  search_book_characters.cpp  search_book_characters.h  search_book_general_info.cpp  search_book_general_info.h  search_book_template.cpp  search_book_template.h  search_books.c  search_books.h  search_books_debug_utils.h  search_books_keynodes.c  search_books_keynodes.h  search_books_utils.cpp  search_books_utils.h
sc-kpm/search/agents/books/: CMakeLists.txt  search_book_template.c  search_book_template.cpp  search_book_template.h
